gke-ai/lab-03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gozaru-gemma-service
spec:
  type: LoadBalancer
  selector:
    app: gozaru-gemma-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
