gke-ai/lab-03/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gemma-route
spec:
  parentRefs:
  - name: inference-gateway
  rules:
  # ござる LoRA
  - matches:
    - headers:
      - name: model
        value: gemma-gozaru
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: gozaru-gemma-pool
      weight: 100
  # ベース
  - matches:
    - headers:
      - name: model
        value: gemma-base
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: gozaru-gemma-pool
      weight: 100
